--- a/index.html
+++ b/index.html
@@ -27,15 +27,9 @@
         <input type="submit" value="submit">
     </fieldset>
 </form>
-<table border="1">
-    <tr>
-        <th>Tên</th>
-        <th>Tuổi</th>
-    </tr>
-    <tr>
-        <td>A</td>
-        <td>15</td>
-    </tr>
-</table>
+<form action="https://www.google.com.vn/" method="get">
+    <input type="text">
+    <input type="submit" value="submit">
+</form>
 </body>
 </html>
